--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,22 @@
   background: #65c4fa;
   filter: blur(150px);
 }
+
+::selection {
+  background-color: rgba(149, 66, 232, 0.35);
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(45, 72, 152, 0.75);
+  border-radius: 14px;
+  border: 1px solid rgba(45, 72, 152, 0.75);
+}
